Feature/console debugging (#568)
* add linting for no-param-reassign and fix resulting linting errors

* add linting for prefer-object-spread and fix resulting linting errors

* add linting for no-restricted-syntax and fix 1/2 of resulting errors

* add linting for no-prototype-builtins and fix resulting linting errors

* add linting for class-methods-use-this and fix most resulting errors. Add /tools and /tests to linter. Update height in UpgradeBanner

* finish linting for class-methods-use-this

* add linting for no-mixed-operators and fix resulting linting errors

* add linting for import/prefer-default-export and fix resulting linting errors

* add linting for react/no-access-state-in-setstate and fix resulting linting errors

* add linting for react/jsx-props-no-spreading and fix resulting linting errors

* finish linting errors for no-restricted-syntax. 1 remains: couldn't resolve removing iterator loops for urlSearchParams

* Fix linting errors resulting from the merge with develop

* Refactor UNSAFE_componentWillMount into either constructor or componentDidMount, leave notes for how decision was made.

* Refactor UNSAFE_componentWillReceiveProps to componentDidUpdate or getDerivedStateFromProps

* re-enable lint exception for no-prototype-builtins and revert calls back to hasOwnProperty

* add single line exception for no-restricted-syntax linting rule

* add linting for react/destructuring-assignment and fix errors. ToDo: test code and check for errors

* Fix minor bugs

* Fix General Settings last updated text

* rework linting rule no-param-reassign to have more exceptions and param object destructuring

* Remove file and line linting exceptions.

* re-add linting rule react/sort-comp and fix resulting errors

* remove added linting exception consistent-return and fix resulting errors

* remove added linting expression no-use-before-define and fix resulting errors. fix BugDB.js bug.

* Fix linting error



--- a/extension-manifest-v2/manifest.json
+++ b/extension-manifest-v2/manifest.json
@@ -1,4 +1,5 @@
 {
+  	"debug": true,
 	"manifest_version": 2,
 	"author": "Ghostery",
 	"name": "__MSG_name__",
@@ -7,7 +8,6 @@
 	"version_name": "8.5.3",
 	"default_locale": "en",
 	"description": "__MSG_short_description__",
-	"log": true,
 	"icons": {
 		"16": "app/images/icon16.png",
 		"48": "app/images/icon48.png",
