--- a/extension-manifest-v2/manifest.json
+++ b/extension-manifest-v2/manifest.json
@@ -109,10 +109,6 @@
 	"minimum_chrome_version": "69",
 	"minimum_opera_version": "56",
 	"web_accessible_resources": [
-		"app/images/*",
-		"dist/css/rewards_styles.css",
-		"cliqz/offers-templates/reminder.html",
-		"cliqz/offers-templates/checkout.html",
-		"cliqz/offers-templates/control-center.html"
+		"app/images/*"
 	]
 }
