disable content scripts on Edge new tab page

--- a/extension-manifest-v2/manifest.json
+++ b/extension-manifest-v2/manifest.json
@@ -75,7 +75,8 @@
 				"https://*/*"
 			],
 			"exclude_matches": [
-				"*://*/_/chrome/newtab*"
+				"*://*/_/chrome/newtab*",
+				"*://ntp.msn.com/*"
 			],
 			"run_at": "document_start"
 		}
