--- a/manifest.json
+++ b/manifest.json
@@ -80,7 +80,7 @@
 			"run_at": "document_start"
 		}
 	],
-	"content_security_policy": "script-src 'self'; object-src 'self'",
+	"content_security_policy": "script-src 'self' 'sha256-9fjlqggImjwAZN8KPwHSmZQlWo4CgkMFJR3cp7VC0jk='; object-src 'self'",
 	"permissions": [
 		"webNavigation",
 		"webRequest",
