--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "vendorCopy": [
     {
-      "from": "node_modules/browser-core/build/assets",
+      "from": "node_modules/ghostery-common/build/gbe/assets",
       "to": "cliqz"
     }
   ],
@@ -44,11 +44,12 @@
   "homepage": "https://github.com/ghostery/ghostery-extension#readme",
   "dependencies": {
     "@cliqz/url-parser": "^1.1.3",
-    "browser-core": "https://github.com/cliqz-oss/browser-core/releases/download/v7.47.5/browser-core-7.47.5.tgz",
     "classnames": "^2.2.5",
     "d3": "^5.16.0",
     "foundation-sites": "^6.6.2",
+    "ghostery-common": "^1.0.1",
     "history": "^4.10.1",
+    "jquery": "3.5.0",
     "json-api-normalizer": "^1.0.0",
     "moment": "^2.26.0",
     "prop-types": "^15.6.2",
