--- a/.github/workflows/LintAndTest.yml
+++ b/.github/workflows/LintAndTest.yml
@@ -8,7 +8,7 @@ on:
       - develop
 
 jobs:
-  check-pr-title-format:
+  lint-and-test:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/setup-node@v2
