--- a/.github/workflows/LintAndTest.yml
+++ b/.github/workflows/LintAndTest.yml
@@ -11,6 +11,7 @@ jobs:
   lint-and-test:
     runs-on: ubuntu-20.04
     steps:
+      - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
           node-version: '10'
