remove edited trigger

--- a/.github/workflows/LintAndTest.yml
+++ b/.github/workflows/LintAndTest.yml
@@ -2,7 +2,7 @@ name: Lint & Test
 
 on:
   pull_request:
-    types: [opened, edited, synchronize, reopened, ready_for_review]
+    types: [opened, synchronize, reopened, ready_for_review]
     branches:
       - master
       - develop
