--- a/extension-manifest-v2/manifest.json
+++ b/extension-manifest-v2/manifest.json
@@ -63,7 +63,7 @@
 			"run_at": "document_start"
 		}
 	],
-	"content_security_policy": "script-src 'self'; object-src 'self'",
+	"content_security_policy": "script-src 'self' 'wasm-eval'; object-src 'self'",
 	"permissions": [
 		"webNavigation",
 		"webRequest",
