--- a/extension-manifest-v2/package.json
+++ b/extension-manifest-v2/package.json
@@ -29,8 +29,24 @@
   },
   "vendorCopy": [
     {
+      "from": "node_modules/hybrids/src",
+      "to": "vendor/hybrids"
+    },
+    {
       "from": "node_modules/ghostery-common/build/gbe/assets",
       "to": "cliqz"
+    },
+    {
+      "from": "node_modules/@whotracksme/webextension-packages/packages/serp-report/src",
+      "to": "vendor/@whotracksme/serp-report/src"
+    },
+    {
+      "from": "node_modules/@whotracksme/webextension-packages/packages/ui/src",
+      "to": "vendor/@whotracksme/ui/src"
+    },
+    {
+      "from": "node_modules/@whotracksme/webextension-packages/packages/tracker-wheel/src",
+      "to": "vendor/@whotracksme/tracker-wheel/src"
     }
   ],
   "repository": {
@@ -44,11 +60,13 @@
   "homepage": "https://github.com/ghostery/ghostery-extension#readme",
   "dependencies": {
     "@cliqz/url-parser": "^1.1.4",
+    "@whotracksme/webextension-packages": "0.0.2",
     "classnames": "^2.2.5",
     "d3": "^5.16.0",
     "foundation-sites": "^6.6.2",
     "ghostery-common": "^1.2.17",
     "history": "^4.10.1",
+    "hybrids": "6.1.0",
     "jquery": "3.5.0",
     "json-api-normalizer": "^1.0.4",
     "moment": "^2.29.1",
@@ -66,6 +84,7 @@
     "redux-thunk": "^2.2.0",
     "rsvp": "^4.8.5",
     "spanan": "^2.0.0",
+    "tldts-experimental": "^5.7.58",
     "ua-parser-js": "^1.0.2",
     "underscore": "^1.13.1"
   },
@@ -73,6 +92,7 @@
     "@babel/core": "^7.11.1",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.16.7",
     "@babel/plugin-transform-modules-commonjs": "^7.10.4",
     "@babel/plugin-transform-named-capturing-groups-regex": "^7.12.13",
     "@babel/preset-react": "^7.10.4",
