--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "vendorCopy": [
     {
       "from": "node_modules/hybrids/src",
-      "to": "vendor/hybrids"
+      "to": "vendor/hybrids/src"
     },
     {
       "from": "node_modules/ghostery-common/build/gbe/assets",
@@ -43,10 +43,6 @@
     {
       "from": "node_modules/@whotracksme/webextension-packages/packages/ui/src",
       "to": "vendor/@whotracksme/ui/src"
-    },
-    {
-      "from": "node_modules/@whotracksme/webextension-packages/packages/tracker-wheel/src",
-      "to": "vendor/@whotracksme/tracker-wheel/src"
     }
   ],
   "repository": {
@@ -60,7 +56,7 @@
   "homepage": "https://github.com/ghostery/ghostery-extension#readme",
   "dependencies": {
     "@cliqz/url-parser": "^1.1.4",
-    "@whotracksme/webextension-packages": "0.0.2",
+    "@whotracksme/webextension-packages": "whotracksme/webextension-packages#feat-refactor",
     "classnames": "^2.2.5",
     "d3": "^5.16.0",
     "foundation-sites": "^6.6.2",
