--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
   "homepage": "https://github.com/ghostery/ghostery-extension#readme",
   "dependencies": {
     "@cliqz/url-parser": "^1.1.4",
-    "@whotracksme/webextension-packages": "whotracksme/webextension-packages#feat-refactor",
+    "@whotracksme/webextension-packages": "^0.1.0",
     "classnames": "^2.2.5",
     "d3": "^5.16.0",
     "foundation-sites": "^6.6.2",
