--- a/package.json
+++ b/package.json
@@ -56,13 +56,13 @@
   "homepage": "https://github.com/ghostery/ghostery-extension#readme",
   "dependencies": {
     "@cliqz/url-parser": "^1.1.4",
-    "@whotracksme/webextension-packages": "^0.1.0",
+    "@whotracksme/webextension-packages": "^0.2.0",
     "classnames": "^2.2.5",
     "d3": "^5.16.0",
     "foundation-sites": "^6.6.2",
     "ghostery-common": "^1.2.17",
     "history": "^4.10.1",
-    "hybrids": "6.1.0",
+    "hybrids": "^7.0.0",
     "jquery": "3.5.0",
     "json-api-normalizer": "^1.0.4",
     "moment": "^2.29.1",
