--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"author": "Ghostery",
 	"name": "__MSG_name__",
 	"short_name": "Ghostery",
-	"version": "8.7.0,
+	"version": "8.7.0",
 	"version_name": "8.7.0",
 	"default_locale": "en",
 	"description": "__MSG_short_description__",
