--- a/ui/package.json
+++ b/ui/package.json
@@ -28,5 +28,14 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.6.2"
+  },
+  "auto": {
+    "baseBranch": "main",
+    "plugins": [
+      "npm"
+    ]
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
