--- a/extension-manifest-v2/package.json
+++ b/extension-manifest-v2/package.json
@@ -42,6 +42,7 @@
   "homepage": "https://github.com/ghostery/ghostery-extension#readme",
   "dependencies": {
     "@cliqz/url-parser": "^1.1.4",
+    "@sentry/browser": "^6.19.7",
     "@whotracksme/webextension-packages": "^0.3.1",
     "classnames": "^2.2.5",
     "d3": "^5.16.0",
