--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "vendorCopy": [
     {
       "from": "node_modules/ghostery-common/build/gbe/assets",
-      "to": "cliqz"
+      "to": "common"
     }
   ],
   "repository": {
