--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "foundation-sites": "^6.6.2",
     "ghostery-common": "^1.2.17",
     "history": "^4.10.1",
+    "hybrids": "^8.0.10",
     "jquery": "3.5.0",
     "json-api-normalizer": "^1.0.4",
     "linkedom": "^0.14.5",
@@ -89,6 +90,7 @@
     "enzyme-adapter-react-16": "^1.15.3",
     "eslint": "^7.6.0",
     "eslint-config-airbnb": "^18.2.0",
+    "eslint-import-resolver-webpack": "^0.13.2",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
