--- a/extension-manifest-v2/package.json
+++ b/extension-manifest-v2/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "build.dev": "webpack --mode development --display-error-details --progress",
     "build.prod": "webpack --mode production --display-error-details --progress",
+    "upload-sentry": "webpack --mode production --display-error-details --progress --devtool source-maps && ./tools/upload-sentry.sh",
     "build.watch": "webpack --mode development --display-error-details --progress --watch",
     "prebuild.dev": "node ./tools/licenses/fetchLicenses.js",
     "prebuild.prod": "node ./tools/licenses/fetchLicenses.js",
