--- a/extension-manifest-v2/.github/workflows/LintAndTest.yml
+++ b/extension-manifest-v2/.github/workflows/LintAndTest.yml
@@ -14,17 +14,18 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          cache: 'npm'
+          node-version: '18'
       - name: Install Dependencies
         run: |
-          yarn install --frozen-lockfile
+          npm ci
       - name: Build Licenses
         run: |
           node ./tools/licenses/fetchLicenses.js
       - name: Lint
         run: |
-          yarn lint
+          npm run lint
       - name: Test
         run: |
-          yarn test
+          npm run test
 
