--- a/.github/workflows/test-extension-manifest-v3.yml
+++ b/.github/workflows/test-extension-manifest-v3.yml
@@ -1,4 +1,4 @@
-name: Tests
+name: Test Extenision Manifest V3
 
 on:
   push:
@@ -7,14 +7,17 @@ on:
     branches: [main]
 
 jobs:
-  test:
+  test-mv3:
     runs-on: ubuntu-latest
-
+    defaults:
+      run:
+        working-directory: extension-manifest-v3
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '16'
+          node-version: '18'
           cache: 'npm'
+          cache-dependency-path: ./extension-manifest-v3/package-lock.json
       - run: npm ci --ignore-scripts
       - run: npm test
