--- a/extension-manifest-v3/package.json
+++ b/extension-manifest-v3/package.json
@@ -42,8 +42,8 @@
   "dependencies": {
     "@cliqz/adblocker": "^1.23.7",
     "@cliqz/adblocker-webextension-cosmetics": "^1.22.7",
-    "@ghostery/libs": "../libs",
-    "@ghostery/ui": "../ui",
+    "@ghostery/libs": "file:../libs",
+    "@ghostery/ui": "file:../ui",
     "@whotracksme/webextension-packages": "^0.3.0",
     "hybrids": "^8.0.3",
     "lodash-es": "^4.17.21",
