--- a/extension-manifest-v3/package.json
+++ b/extension-manifest-v3/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "download-cosmetics": "node scripts/download-cosmetics.js",
     "download-dnr-lists": "node scripts/download-dnr-lists.js",
-    "postinstall": "npm run download-cosmetics && npm run download-dnr-lists",
+    "postinstall": "patch-package && npm run download-cosmetics && npm run download-dnr-lists",
     "build": "node scripts/build.js",
     "build.chromium": "npm run build -- --target chromium",
     "build.safari": "npm run build -- --target safari",
     "dev": "npm run build.chromium -- --watch",
+    "dev.safari": "npm run build.safari -- --watch",
     "release": "web-ext build",
     "start": "web-ext run --target=chromium",
     "lint": "eslint src/",
@@ -32,6 +33,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "node-fetch": "^3.2.3",
+    "patch-package": "^6.4.7",
     "prettier": "^2.6.1",
     "rimraf": "^3.0.2",
     "shelljs": "^0.8.5",
@@ -47,7 +49,8 @@
     "@whotracksme/webextension-packages": "^0.3.0",
     "hybrids": "^8.0.3",
     "lodash-es": "^4.17.21",
-    "tldts-experimental": "^5.7.66"
+    "tldts-experimental": "^5.7.66",
+    "ua-parser-js": "^1.0.2"
   },
   "webExt": {
     "sourceDir": "./dist/"
