--- a/.github/workflows/test-extension-manifest-v3.yml
+++ b/.github/workflows/test-extension-manifest-v3.yml
@@ -19,5 +19,14 @@ jobs:
           node-version: '18'
           cache: 'npm'
           cache-dependency-path: ./extension-manifest-v3/package-lock.json
+      - name: Install dependencies in libs
+        run: npm ci
+        working-directory: libs
+      - name: Install dependencies in ui
+        run: npm ci
+        working-directory: ui
+      - name: Install dependencies
+        run: |
+          npm ci
       - run: npm ci --ignore-scripts
       - run: npm test
