--- a/extension-manifest-v2/package.json
+++ b/extension-manifest-v2/package.json
@@ -50,7 +50,7 @@
   "dependencies": {
     "@cliqz/url-parser": "^1.1.4",
     "@ghostery/libs": "file:../libs",
-    "@ghostery/ui": "../ui",
+    "@ghostery/ui": "file:../ui",
     "@sentry/browser": "7.1.1",
     "@whotracksme/webextension-packages": "^0.3.1",
     "classnames": "^2.2.5",
