--- a/extension-manifest-v2/package.json
+++ b/extension-manifest-v2/package.json
@@ -48,8 +48,9 @@
   },
   "homepage": "https://github.com/ghostery/ghostery-extension#readme",
   "dependencies": {
-    "@ghostery/ui": "../ui",
     "@cliqz/url-parser": "^1.1.4",
+    "@ghostery/libs": "file:../libs",
+    "@ghostery/ui": "file:../ui",
     "@sentry/browser": "7.1.1",
     "@whotracksme/webextension-packages": "^0.3.1",
     "classnames": "^2.2.5",
@@ -76,7 +77,6 @@
     "rsvp": "^4.8.5",
     "spanan": "^2.0.0",
     "tldts-experimental": "^5.7.58",
-    "ua-parser-js": "^1.0.2",
     "underscore": "^1.13.1"
   },
   "devDependencies": {
@@ -104,7 +104,8 @@
     "eslint-plugin-react": "^7.20.5",
     "find-in-files": "^0.5.0",
     "fs-extra": "^9.0.1",
-    "jest": "^26.3.0",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
     "jest-fetch-mock": "^3.0.3",
     "jest-when": "^2.7.2",
     "jsdoc": "^3.6.7",
