--- a/extension-manifest-v3/package.json
+++ b/extension-manifest-v3/package.json
@@ -16,7 +16,7 @@
     "start": "web-ext run --target=chromium",
     "lint": "eslint src/",
     "test": "npm run lint",
-    "locales.wtm": "hybrids extract -c --format=chrome.i18n node_modules/@whotracksme ./src/_locales/en/messages.json",
+    "locales.wtm": "hybrids extract -c --format=chrome.i18n node_modules/@whotracksme/webextension-packages/packages ./src/_locales/en/messages.json",
     "locales.ui": "hybrids extract -c --format=chrome.i18n node_modules/@ghostery/ui ./src/_locales/en/messages.json",
     "locales.src": "hybrids extract -c --format=chrome.i18n ./src ./src/_locales/en/messages.json",
     "locales": "npm run locales.wtm && npm run locales.ui && npm run locales.src",
