Apply patch https://github.com/mozilla/webextension-polyfill/pull/385 from the webextension-polyfill (and removes the minified file). The patch silences the following warning that started to appear in recent Chrome versions:
A listener indicated an asynchronous response by returning true, but the message channel closed before a response was received

refs #806

--- a/extension-manifest-v2/package.json
+++ b/extension-manifest-v2/package.json
@@ -26,7 +26,7 @@
     "docs": "jsdoc -c jsdoc.json -d docs -r",
     "leet": "node ./tools/leet/leet-en.js",
     "leet.reset": "node ./tools/leet/leet-reset.js",
-    "postinstall": "vendor-copy",
+    "postinstall": "patch-package && vendor-copy",
     "locales.wtm": "hybrids extract -c --format=chrome.i18n node_modules/@whotracksme/webextension-packages/packages ./_locales/en/messages.json",
     "locales.ui": "hybrids extract -c --format=chrome.i18n node_modules/@ghostery/ui ./_locales/en/messages.json",
     "locales.src": "hybrids extract -c --format=chrome.i18n ./app ./_locales/en/messages.json",
@@ -113,6 +113,7 @@
     "license-checker": "^25.0.1",
     "mini-css-extract-plugin": "^0.10.0",
     "oboe": "^2.1.5",
+    "patch-package": "^6.4.7",
     "path": "^0.12.7",
     "react-router": "^5.2.0",
     "react-test-renderer": "^16.13.1",
