--- a/extension-manifest-v3/package.json
+++ b/extension-manifest-v3/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ghostery/extension-manifest-v3",
   "private": true,
-  "version": "9.5.0",
+  "version": "9.6.0",
   "type": "module",
   "scripts": {
     "download-cosmetics": "node scripts/download-cosmetics.js",
@@ -43,10 +43,11 @@
   "dependencies": {
     "@cliqz/adblocker": "^1.23.7",
     "@cliqz/adblocker-webextension-cosmetics": "^1.22.7",
+    "@duckduckgo/autoconsent": "^2.1.2",
     "@ghostery/libs": "file:../libs",
     "@ghostery/ui": "file:../ui",
     "@whotracksme/webextension-packages": "^0.3.0",
-    "hybrids": "^8.0.10",
+    "hybrids": "^8.1.0",
     "lodash-es": "^4.17.21",
     "tldts-experimental": "^5.7.66"
   },
