--- a/ui/package.json
+++ b/ui/package.json
@@ -9,7 +9,8 @@
     "./css": "./src/index.css",
     "./categories": "./src/utils/categories.js",
     "./wheel": "./src/utils/wheel.js",
-    "./onboarding": "./src/modules/onboarding/index.js"
+    "./onboarding": "./src/modules/onboarding/index.js",
+    "./autoconsent": "./src/modules/autoconsent/index.js"
   },
   "scripts": {
     "lint": "eslint ./src"
