--- a/extension-manifest-v2/manifest.json
+++ b/extension-manifest-v2/manifest.json
@@ -293,6 +293,7 @@
 	"minimum_opera_version": "56",
 	"web_accessible_resources": [
 		"app/images/*",
-		"app/templates/trackers-preview.html"
+		"app/templates/trackers-preview.html",
+		"app/templates/autoconsent.html"
 	]
 }
