--- a/extension-manifest-v2/package.json
+++ b/extension-manifest-v2/package.json
@@ -49,6 +49,7 @@
   "homepage": "https://github.com/ghostery/ghostery-extension#readme",
   "dependencies": {
     "@cliqz/url-parser": "^1.1.4",
+    "@duckduckgo/autoconsent": "^2.2.0",
     "@ghostery/libs": "file:../libs",
     "@ghostery/ui": "file:../ui",
     "@sentry/browser": "7.1.1",
