--- a/ui/package.json
+++ b/ui/package.json
@@ -11,6 +11,7 @@
     "./wheel": "./src/utils/wheel.js",
     "./onboarding": "./src/modules/onboarding/index.js",
     "./autoconsent": "./src/modules/autoconsent/index.js",
+    "./autoconsent/iframe": "./src/modules/autoconsent/iframe.js",
     "./trackers-preview": "./src/modules/trackers-preview/index.js"
   },
   "scripts": {
