--- a/extension-manifest-v3/package.json
+++ b/extension-manifest-v3/package.json
@@ -46,7 +46,7 @@
     "@duckduckgo/autoconsent": "^3.0.1",
     "@ghostery/libs": "file:../libs",
     "@ghostery/ui": "file:../ui",
-    "@whotracksme/webextension-packages": "^0.4.3",
+    "@whotracksme/webextension-packages": "1.0.0",
     "hybrids": "^8.1.0",
     "lodash-es": "^4.17.21",
     "tldts-experimental": "^5.7.66"
