--- a/extension-manifest-v2/package.json
+++ b/extension-manifest-v2/package.json
@@ -53,7 +53,7 @@
     "@ghostery/libs": "file:../libs",
     "@ghostery/ui": "file:../ui",
     "@sentry/browser": "7.1.1",
-    "@whotracksme/webextension-packages": "0.4.3",
+    "@whotracksme/webextension-packages": "^0.4.9",
     "classnames": "^2.2.5",
     "d3": "^5.16.0",
     "foundation-sites": "^6.6.2",
