Downgrade linkedom to version 0.14.12 to fix a build error with webpack:
ERROR in ./node_modules/linkedom/cjs/html/option-element.js 23:38
Module parse failed: Unexpected token (23:38)
You may need an appropriate loader to handle this file type, currently no loaders are configured to process this file. See https://webpack.js.org/concepts#loaders
|   get selected() { return booleanAttribute.get(this, 'selected'); }
|   set selected(value) {
>     const option = this.parentElement?.querySelector('option[selected]');
|     if (option && option !== this)
|       option.selected = false;
 @ ./node_modules/linkedom/cjs/shared/html-classes.js 32:28-64
 @ ./node_modules/linkedom/cjs/index.js
 @ ./src/classes/Common.js
 @ ./src/background.js
 @ multi ./src/background.js

--- a/extension-manifest-v2/package.json
+++ b/extension-manifest-v2/package.json
@@ -61,7 +61,7 @@
     "history": "^4.10.1",
     "hybrids": "^8.1.1",
     "json-api-normalizer": "^1.0.4",
-    "linkedom": "^0.14.5",
+    "linkedom": "0.14.12",
     "moment": "^2.29.1",
     "prop-types": "^15.6.2",
     "query-string": "^6.13.1",
