--- a/extension-manifest-v2/package.json
+++ b/extension-manifest-v2/package.json
@@ -97,6 +97,7 @@
     "css-loader": "^4.2.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.3",
+    "esbuild-loader": "^2.20.0",
     "eslint": "^7.6.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-import-resolver-webpack": "^0.13.2",
