--- a/extension-manifest-v2/package.json
+++ b/extension-manifest-v2/package.json
@@ -17,8 +17,8 @@
     "prebuild.dev": "node ./tools/licenses/fetchLicenses.js",
     "prebuild.prod": "node ./tools/licenses/fetchLicenses.js",
     "prebuild.watch": "node ./tools/licenses/fetchLicenses.js",
-    "test": "cross-env BABEL_ENV=test jest",
-    "test.watch": "cross-env BABEL_ENV=test jest --watch",
+    "test": "cross-env jest",
+    "test.watch": "cross-env jest --watch",
     "test.snapshot": "jest --updateSnapshot",
     "lint": "eslint --ext .js,.jsx ./app ./src ./test ./tools",
     "lint.fix": "eslint --ext .js,.jsx ./app ./src ./test ./tools --fix",
@@ -82,29 +82,16 @@
     "url": "^0.11.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.0",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
-    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
-    "@babel/plugin-proposal-optional-chaining": "^7.16.7",
-    "@babel/plugin-transform-modules-commonjs": "^7.10.4",
-    "@babel/plugin-transform-named-capturing-groups-regex": "^7.12.13",
-    "@babel/preset-react": "^7.18.6",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^4.2.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.3",
     "esbuild-loader": "^2.20.0",
-    "eslint": "^7.6.0",
-    "eslint-config-airbnb": "^18.2.0",
+    "eslint": "^8.29.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-import-resolver-webpack": "^0.13.2",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.5",
+    "eslint-plugin-import": "^2.26.0",
     "find-in-files": "^0.5.0",
     "fs-extra": "^9.0.1",
     "jest": "^28.1.3",
