--- a/extension-manifest-v2/package.json
+++ b/extension-manifest-v2/package.json
@@ -92,6 +92,7 @@
     "eslint-config-airbnb": "^19.0.4",
     "eslint-import-resolver-webpack": "^0.13.2",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-webpack-plugin": "^3.2.0",
     "find-in-files": "^0.5.0",
     "fs-extra": "^9.0.1",
     "jest": "^28.1.3",
@@ -103,6 +104,7 @@
     "license-checker": "^25.0.1",
     "mini-css-extract-plugin": "^0.10.0",
     "oboe": "^2.1.5",
+    "os-browserify": "^0.3.0",
     "patch-package": "^6.4.7",
     "path": "^0.12.7",
     "react-router": "^5.2.0",
@@ -113,6 +115,7 @@
     "seamless-immutable": "^7.1.3",
     "sinon-chrome": "^3.0.1",
     "svg-url-loader": "^6.0.0",
+    "tty-browserify": "^0.0.1",
     "underscore-template-loader": "^1.1.0",
     "url-loader": "^4.1.1",
     "vendor-copy": "^3.0.1",
