--- a/extension-manifest-v2/package.json
+++ b/extension-manifest-v2/package.json
@@ -17,8 +17,8 @@
     "prebuild.dev": "node ./tools/licenses/fetchLicenses.js",
     "prebuild.prod": "node ./tools/licenses/fetchLicenses.js",
     "prebuild.watch": "node ./tools/licenses/fetchLicenses.js",
-    "test": "cross-env jest",
-    "test.watch": "cross-env jest --watch",
+    "test": "jest",
+    "test.watch": "jest --watch",
     "test.snapshot": "jest --updateSnapshot",
     "lint": "eslint --ext .js,.jsx ./app ./src ./test ./tools",
     "lint.fix": "eslint --ext .js,.jsx ./app ./src ./test ./tools --fix",
@@ -83,10 +83,10 @@
   },
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
-    "cross-env": "^7.0.3",
     "css-loader": "^4.2.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.3",
+    "esbuild-jest": "^0.5.0",
     "esbuild-loader": "^2.20.0",
     "eslint": "^8.29.0",
     "eslint-config-airbnb": "^19.0.4",
