--- a/extension-manifest-v2/package.json
+++ b/extension-manifest-v2/package.json
@@ -83,7 +83,7 @@
   },
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^4.2.1",
+    "css-loader": "^6.7.3",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.3",
     "esbuild-jest": "^0.5.0",
@@ -102,7 +102,7 @@
     "jsdoc": "^3.6.7",
     "jsonfile": "^6.1.0",
     "license-checker": "^25.0.1",
-    "mini-css-extract-plugin": "^0.10.0",
+    "mini-css-extract-plugin": "^2.7.2",
     "oboe": "^2.1.5",
     "os-browserify": "^0.3.0",
     "patch-package": "^6.4.7",
@@ -110,8 +110,9 @@
     "react-router": "^5.2.0",
     "react-test-renderer": "^16.13.1",
     "redux-mock-store": "^1.5.4",
-    "sass": "^1.54.0",
-    "sass-loader": "^10.3.1",
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.56.2",
+    "sass-loader": "^10.4.1",
     "seamless-immutable": "^7.1.3",
     "sinon-chrome": "^3.0.1",
     "svg-url-loader": "^6.0.0",
