--- a/extension-manifest-v3/src/manifest.safari.json
+++ b/extension-manifest-v3/src/manifest.safari.json
@@ -21,7 +21,7 @@
     "default_title": "Ghostery",
     "default_popup": "pages/panel/index.html"
   },
-  "options_page": "pages/options/index.html",
+  "options_page": "pages/settings/index.html",
   "content_scripts": [
     {
       "matches": ["*://*/*"],
