Settings page - websites

--- a/extension-manifest-v3/package.json
+++ b/extension-manifest-v3/package.json
@@ -13,7 +13,7 @@
     "dev": "npm run build.chromium -- --watch",
     "dev.safari": "npm run build.safari -- --watch",
     "release": "web-ext build",
-    "start": "web-ext run --target=chromium",
+    "start": "web-ext run --target=chromium --no-reload",
     "lint": "eslint src/",
     "test": "npm run lint",
     "locales.wtm": "hybrids extract -c --format=chrome.i18n node_modules/@whotracksme/webextension-packages/packages ./src/_locales/en/messages.json",
@@ -47,8 +47,9 @@
     "@duckduckgo/autoconsent": "^3.0.1",
     "@ghostery/libs": "file:../libs",
     "@ghostery/ui": "file:../ui",
+    "@github/relative-time-element": "^4.1.5",
     "@whotracksme/webextension-packages": "^2.1.0",
-    "hybrids": "^8.1.11",
+    "hybrids": "file:../../hybrids",
     "lodash-es": "^4.17.21",
     "tldts-experimental": "^5.7.66"
   },
