--- a/extension-manifest-v3/package.json
+++ b/extension-manifest-v3/package.json
@@ -49,7 +49,7 @@
     "@ghostery/ui": "file:../ui",
     "@github/relative-time-element": "^4.1.5",
     "@whotracksme/webextension-packages": "^2.1.0",
-    "hybrids": "file:../../hybrids",
+    "hybrids": "^8.1.12",
     "lodash-es": "^4.17.21",
     "tldts-experimental": "^5.7.66"
   },
