--- a/ui/package.json
+++ b/ui/package.json
@@ -5,10 +5,10 @@
   "description": "",
   "type": "module",
   "exports": {
-    ".": "./src/index.js",
     "./autoconsent": "./src/modules/autoconsent/index.js",
     "./autoconsent/iframe": "./src/modules/autoconsent/iframe.js",
     "./onboarding": "./src/modules/onboarding/index.js",
+    "./pages": "./src/modules/pages/index.js",
     "./panel": "./src/modules/panel/index.js",
     "./settings": "./src/modules/settings/index.js",
     "./trackers-preview": "./src/modules/trackers-preview/index.js",
