--- a/extension-manifest-v2/package.json
+++ b/extension-manifest-v2/package.json
@@ -92,6 +92,7 @@
     "eslint-webpack-plugin": "^3.2.0",
     "find-in-files": "^0.5.0",
     "fs-extra": "^9.0.1",
+    "import-meta-loader": "^1.1.0",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
     "jest-fetch-mock": "^3.0.3",
