--- a/extension-manifest-v2/package.json
+++ b/extension-manifest-v2/package.json
@@ -14,9 +14,10 @@
     "build.prod": "webpack --mode production --progress",
     "upload-sentry": "webpack --mode production --progress --devtool source-maps && ./tools/upload-sentry.sh",
     "build.watch": "webpack --mode development --progress --watch",
-    "prebuild.dev": "node ./tools/licenses/fetchLicenses.js",
-    "prebuild.prod": "node ./tools/licenses/fetchLicenses.js",
-    "prebuild.watch": "node ./tools/licenses/fetchLicenses.js",
+    "licenses": "node ../tools/licenses.js",
+    "prebuild.dev": "npm run licenses",
+    "prebuild.prod": "npm run licenses",
+    "prebuild.watch": "npm run licenses",
     "test": "jest",
     "test.watch": "jest --watch",
     "test.snapshot": "jest --updateSnapshot",
@@ -99,7 +100,6 @@
     "jest-when": "^2.7.2",
     "jsdoc": "^3.6.7",
     "jsonfile": "^6.1.0",
-    "license-checker": "^25.0.1",
     "mini-css-extract-plugin": "^2.7.2",
     "oboe": "^2.1.5",
     "os-browserify": "^0.3.0",
