--- a/extension-manifest-v2/package.json
+++ b/extension-manifest-v2/package.json
@@ -15,9 +15,6 @@
     "upload-sentry": "webpack --mode production --progress --devtool source-maps && ./tools/upload-sentry.sh",
     "build.watch": "webpack --mode development --progress --watch",
     "licenses": "node ../tools/licenses.js",
-    "prebuild.dev": "npm run licenses",
-    "prebuild.prod": "npm run licenses",
-    "prebuild.watch": "npm run licenses",
     "test": "jest",
     "test.watch": "jest --watch",
     "test.snapshot": "jest --updateSnapshot",
@@ -27,7 +24,7 @@
     "docs": "jsdoc -c jsdoc.json -d docs -r",
     "leet": "node ./tools/leet/leet-en.js",
     "leet.reset": "node ./tools/leet/leet-reset.js",
-    "postinstall": "patch-package && vendor-copy",
+    "postinstall": "patch-package && vendor-copy && npm run licenses",
     "locales.wtm": "hybrids extract -c --format=chrome.i18n node_modules/@whotracksme/webextension-packages/packages ./_locales/en/messages.json",
     "locales.ui": "hybrids extract -c --format=chrome.i18n node_modules/@ghostery/ui ./_locales/en/messages.json",
     "locales.src": "hybrids extract -c --format=chrome.i18n ./app ./_locales/en/messages.json",
