Move license generation to build script & minor fixes

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ghostery-extension",
   "version": "1.0.0",
+  "private": true,
   "devDependencies": {
     "license-checker": "^25.0.1"
   }
