--- a/extension-manifest-v3/package.json
+++ b/extension-manifest-v3/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "download-cosmetics": "node scripts/download-cosmetics.js",
     "download-dnr-lists": "node scripts/download-dnr-lists.js",
-    "postinstall": "patch-package && npm run download-cosmetics && npm run download-dnr-lists && npm run licenses",
-    "licenses": "node ../tools/licenses.js",
+    "postinstall": "patch-package && npm run download-cosmetics && npm run download-dnr-lists",
     "build": "node scripts/build.js",
     "build.chromium": "npm run build -- --target chromium",
     "build.safari": "npm run build -- --target safari",
