--- a/.github/workflows/test-extension-manifest-v2.yml
+++ b/.github/workflows/test-extension-manifest-v2.yml
@@ -18,19 +18,10 @@ jobs:
         with:
           cache: 'npm'
           node-version: '18'
-          cache-dependency-path: ./extension-manifest-v2/package-lock.json
+          cache-dependency-path: ./package-lock.json
       - name: Install dependencies in repo root
         run: npm ci
         working-directory: .
-      - name: Install dependencies in libs
-        run: npm ci
-        working-directory: libs
-      - name: Install dependencies in ui
-        run: npm ci
-        working-directory: ui
-      - name: Install dependencies
-        run: |
-          npm ci
       - name: Build Licenses
         run: |
           npm run licenses
@@ -40,4 +31,6 @@ jobs:
       - name: Test
         run: |
           npm run test
+      - name: Build
+        run: npm run build.prod
 
