--- a/extension-manifest-v3/package.json
+++ b/extension-manifest-v3/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "download-cosmetics": "node scripts/download-cosmetics.js",
     "download-dnr-lists": "node scripts/download-dnr-lists.js",
-    "postinstall": "patch-package && npm run download-cosmetics && npm run download-dnr-lists",
+    "postinstall": "npm run download-cosmetics && npm run download-dnr-lists",
     "build": "node scripts/build.js",
     "build.chromium": "npm run build -- --target chromium",
     "build.safari": "npm run build -- --target safari",
@@ -33,7 +33,6 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "node-fetch": "^3.2.3",
-    "patch-package": "^6.5.0",
     "prettier": "^2.6.1",
     "rimraf": "^3.0.2",
     "shelljs": "^0.8.5",
@@ -49,7 +48,7 @@
     "@ghostery/ui": "file:../ui",
     "@github/relative-time-element": "^4.1.5",
     "@whotracksme/webextension-packages": "^2.1.0",
-    "hybrids": "^8.1.12",
+    "hybrids": "^8.1.13",
     "lodash-es": "^4.17.21",
     "tldts-experimental": "^5.7.66"
   },
